--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
                                 <p class="price">5768 руб/шт</p>
                         </article>
                         <button class="add-chip">
-                            <a href="#">Добавить в корзину</a>
+                            Добавить в корзину
                         </button>
                     </li>
                     <li class="cart-block">
@@ -66,7 +66,7 @@
                                 <p class="price">5768 руб/шт</p>
                         </article>
                         <button class="add-chip">
-                            <a href="#">Добавить в корзину</a>
+                            Добавить в корзину
                         </button>
                     </li>
                     <li class="cart-block">
@@ -79,7 +79,7 @@
                                 <p class="price">5768 руб/шт</p>
                         </article>
                         <button class="add-chip">
-                            <a href="#">Добавить в корзину</a>
+                            Добавить в корзину
                         </button>
                     </li>
                     <li class="cart-block">
@@ -92,7 +92,7 @@
                                 <p class="price">5768 руб/шт</p>
                         </article>
                         <button class="add-chip">
-                            <a href="#">Добавить в корзину</a>
+                            Добавить в корзину
                         </button>
                     </li>
                     <li class="cart-block">
@@ -105,7 +105,7 @@
                                 <p class="price">5768 руб/шт</p>
                         </article>
                         <button class="add-chip">
-                            <a href="#">Добавить в корзину</a>
+                           Добавить в корзину
                         </button>
                     </li>
                     <li class="cart-block">
@@ -118,7 +118,7 @@
                                 <p class="price">5768 руб/шт</p>
                         </article>
                         <button class="add-chip">
-                            <a href="#">Добавить в корзину</a>
+                            Добавить в корзину
                         </button>
                     </li>
                     <li class="cart-block">
@@ -131,7 +131,7 @@
                                 <p class="price">5768 руб/шт</p>
                         </article>
                         <button class="add-chip">
-                            <a href="#">Добавить в корзину</a>
+                            Добавить в корзину
                         </button>
                     </li>
                     <li class="cart-block">
@@ -144,11 +144,32 @@
                                 <p class="price">5768 руб/шт</p>
                         </article>
                         <button class="add-chip">
-                            <a href="#">Добавить в корзину</a>
+                            Добавить в корзину
                         </button>
                     </li>
                 </ul>
     </section>
+    <div class="chip-open">
+        <div class="chip-body">
+            <p class="cart-title">Корзина</p>
+            <p class="chip-total">Общая сумма: <span>0</span> руб</p>
+            <hr>
+            <div class="wrapper">
+                <p class="empty">
+                    Ваша корзина пока пуста
+                </p>
+            </div>
+            <button class="chip-confirm">Оформить заказ</button>
+            <div class="chip-close">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+            </div>
+        </div>
+    </div>
+
+    <div class="confirm">
+        <img src="icons/confirm.svg" alt="confirm">
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
